# rust-agentic-archetype

./: .luarc.json  answers.yaml  archetype.lua  archetype.yaml
contents/agent-mcp/{{ project-name }}/crates/{{ project-name }}-core/src/: agent.rs
contents/agent/{{ project-name }}/crates/{{ project-name }}-core/src/: agent.rs
contents/base/{{ project-name }}/: CLAUDE.md  Cargo.toml  README.md
contents/base/{{ project-name }}/crates/{{ project-name }}-bin/: Cargo.toml
contents/base/{{ project-name }}/crates/{{ project-name }}-bin/src/: cli.rs  logging.rs  main.rs
contents/base/{{ project-name }}/crates/{{ project-name }}-core/: Cargo.toml
contents/base/{{ project-name }}/crates/{{ project-name }}-core/src/: config.rs  error.rs  lib.rs
contents/base/{{ project-name }}/docs/specs/: INDEX.md
contents/crate-xtask/{{ project-name }}/xtask/: Cargo.toml
contents/crate-xtask/{{ project-name }}/xtask/src/: main.rs
contents/mcp-http/{{ project-name }}/crates/{{ project-name }}-core/src/: transport_http.rs
contents/mcp-stdio/{{ project-name }}/crates/{{ project-name }}-core/src/: transport_stdio.rs
contents/mcp/{{ project-name }}/crates/{{ project-name }}-core/src/: server.rs
contents/sqlite/{{ project-name }}/crates/{{ project-name }}-core/src/: db.rs
