[workspace]
resolver = "2"

members = ["crates/*"{% if has_xtask then %}, "xtask"{% end %}]

default-members = ["crates/{{ project-name }}-bin"]

[workspace.package]
edition = "2024"
version = "0.1.0"
{% if license ~= "None" then %}license = "{{ license }}"
{% end %}publish = false

[workspace.dependencies]
{{ project-name }}-core = { path = "crates/{{ project-name }}-core", version = "0.1.0" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "signal", "time"] }

# CLI & config
clap = { version = "4", features = ["cargo", "derive", "env", "string"] }
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yml = "0.0.12"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }

# Env file loading
dotenvy = "0.15"

# MCP
rmcp = { version = "0.17", features = ["server", "transport-io"{% if has_http then %}, "transport-streamable-http-server"{% end %}] }
{% if has_agent then %}
# Agent / Inference
rig-core = "0.31"
{% end %}{% if has_http then %}
# HTTP
axum = { version = "0.8", features = ["http1", "json", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }

# OAuth / JWT validation (HTTP transport)
jsonwebtoken = "9"
base64 = "0.22"
urlencoding = "2"
{% end %}{% if has_sqlite then %}
# Database
rusqlite = { version = "0.38", features = ["bundled", "column_decltype"] }
{% end %}

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
