[package]
name = "{{ project-name }}-bin"
description = "CLI binary for {{ project-title }}"
version.workspace = true
edition.workspace = true
{% if license ~= "None" then %}license.workspace = true
{% end %}publish.workspace = true

[[bin]]
name = "{{ project-name }}"
path = "src/main.rs"

[dependencies]
{{ project-name }}-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
