[package]
name = "{{ project-name }}-core"
description = "Core library for {{ project-title }}"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
serde_yml = { workspace = true }
rmcp = { workspace = true }
{% if has_agent then %}rig-core = { workspace = true }
{% end %}{% if has_http then %}axum = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
{% end %}{% if has_sqlite then %}rusqlite = { workspace = true }
{% end %}
[lints]
workspace = true
